--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 }
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
@@ -202,25 +203,25 @@ main {
     font-weight: 100;
 }
 
-/* ================================= Media Queries Breakpoints =========================== */
-
-@media screen and (max-width: 800px) {
-    .profile__img-container {
-        width: 100px;
-        height: 100px;
-    }
-
-    .profile__img {
-        width: 90px;
-    }
+footer div{
+    font-family: var(--all-font);
+    font-size: 15px;
+    font-weight: 100;
+    color: rgb(210, 203, 203);
+}
+footer a {
+    text-decoration: none;
+    color: #abaee8;
+    font-size: 17px;
 }
 
-@media screen and (min-width: 1023px) {
+/* ================================= Media Queries Breakpoints =========================== */
+@media screen and (min-width: 900px) {
     .container {
         display: grid;
         grid-template-columns: 255px 1fr;
         column-gap: 1.9rem;
-        margin-inline: 12rem;
+        margin-inline: 16rem;
     }
 
     .profile__container {
